xx/xx/2004 autofs-4.1.4
-----------------------
- fix error in define of mtab lock file.
- fix mischief caused by change in default strict -> nonstrict.
- fix replicated server detection (TCP/UDP/NFSv2/NFSv3) logic
  (Jeff Moyer and Ian Kent).
- fix error when setting pwd.
- fix socket leak (Jeff Moyer and Ian Kent).
- fix potential race in signal handling code (Jeff Moyer).
- miscelaneous corrections to doco and typos (Peter Breitenlohner).
- fix i18n init script underline output (Jeff Moyer).
- fix logic error in replicated server selection (Jeremy Rosengren and Ian Kent).
- the map change detection patch
    - note this requires a kernel patch to work, see README.patches.
- correct whitespace handling in maps.
- mount table handling cleanup.
- fix multi map lookup broken after the map update patch.
- fix auto master map concatenation bug (Jeff Moyer).

19/05/2004 autofs-4.1.3
-----------------------
- fixed bug processing --verbose option in init scripts.
- added missing parameter in call to run fsck on ext2 module (Jeff Moyer).
- added check for executable existance in getldapmounts in init script.
- updated comment about option handling in getmounts in init script.
- updated kernel module patches.
- fix to init script for reload option (Michael Blandford).
- autofs now requires autoconf later than 2.5.
- replicated server fixup.
- fix segv in NIS lookup module (Jeff Moyer).
- init script fix for Debian (Thorild Selen).
- fix pie option not checking for runable executable.
- add NFS V3 and TCP to rpc discovery.
- make nonstrict the default for multi-mount map entries.

07/04/2004 autofs-4.1.2
-----------------------
- merge patches from Jeff Moyer.
   - Change (back) compile option -fpic -> -fPIC.
   - add code to recognise old LDAP master map format.
   - document limitation of direct mounts obscuring mount
     points in README.direct.
   - fix error in detecting duplicate master map entries
     in init script.